--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <main>
+        <main id="home">
             <header class="fix-header">
                 <div class="content">
                     <nav class="navbar">
@@ -30,11 +30,11 @@
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
 
                         <!-- Action -->
@@ -115,7 +115,7 @@
             </div>
 
             <!-- Guides -->
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -193,7 +193,7 @@
 
             <!--Featureds  -->
 
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -346,7 +346,7 @@
                 </div>
             </div>
             <!-- Starts -->
-            <div class="starts">
+            <div id="resources" class="starts">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -532,7 +532,7 @@
             </div>
 
             <!-- Subscription -->
-            <div class="subscription">
+            <div id="contact" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
