--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <a href="#!"
+                        <a href="#"
                             ><img src="./assets/css/img/Logo.svg" alt="Besnik."
                         /></a>
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#home">Home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#features">Features</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#resources">Resources</a></li>
@@ -48,7 +48,7 @@
            <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
-                    <div class="hero">
+                  
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
                             <h1 class="title">
@@ -67,7 +67,7 @@
                             alt="Discover a place you'll love to live."
                             class="hero-img"
                         />
-                    </div>
+                    
                 </div>
             </div>
 
