--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>F8 Project 01</title>
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/css/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/css/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/css/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/css/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/css/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/css/favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/css/favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/css/favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/css/favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./assets/css/favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/css/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/css/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/css/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./assets/css/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="./assets/css/favicon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">">
+
         <!-- reset css -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <!-- font style -->
@@ -19,7 +38,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <main id="home">
+        
             <header class="fix-header">
                 <div class="content">
                     <nav class="navbar">
@@ -45,6 +64,7 @@
                     </nav>
                 </div>
             </header>
+        <main id="home"></main>
            <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
@@ -555,6 +575,7 @@
                     </div>
                 </div>
             </div>
+        </main>
             <!-- Footer -->
             <footer class="footer">
                 <div class="content">
@@ -657,6 +678,6 @@
                     </div>
                 </div>
             </footer>
-        </main>
+       
     </body>
 </html>
